--- a/src/resources/css/mystyle.css
+++ b/src/resources/css/mystyle.css
@@ -77,8 +77,15 @@ td {
 
 div#container {
   margin: 0 auto 0 auto;
-  max-width:720px;
-  padding: 1em 1.5em 1.3em 1.5em;
+  width:800px;
+  max-width: 800px;
+  /*padding: 1em 1.5em 1.3em 1.5em;*/
+}
+
+div#selectionBar {
+  margin-bottom: 10px;
+  max-width: 800px;
+  height: 25px;
 }
 
 div#highlight {
